# opentelemetry-python-exporter-oci-monitoring

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/opentelemetry_exporter_oci_monitoring/: __init__.py  converter.py  models.py  utils.py
tests/: __init__.py  conftest.py  strategies.py  test_convert_gauges.py  test_exporter.py  test_prefixed_dims.py  test_utils.py
typings/oci/: request.pyi  response.pyi  util.pyi
typings/oci/monitoring/: __init__.pyi  models.pyi
