[project]
name = "opentelemetry-exporter-oci-monitoring"
requires-python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
pre_bump_hooks = ["poetry run pytest", "scripts/regenerate-badges.sh"]

[tool.coverage.run]
source = ["src", "tests"]

[tool.poetry]
name = "opentelemetry-exporter-oci-monitoring"
version = "0.2.0"
description = ""
authors = ["Björn Reetz <git@bjoern-reetz.de>"]
readme = "README.md"
packages = [{include = "opentelemetry_exporter_oci_monitoring", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
opentelemetry-sdk = "^1.25.0"
oci = "^2.129.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pybadges = "^3.0.1"
hypothesis = "^6.105.0"

[tool.poetry.group.pyright]
optional = true

[tool.poetry.group.pyright.dependencies]
pyright = "^1.1.372"

[tool.pyright]
strict = ["src", "tests"]
pythonVersion = "3.8"
pythonPlatform = "All"
# reportCallInDefaultInitializer = "warning"  # use ruff B008 instead
# reportImplicitOverride = "warning"  # requires Python >= 3.12
# reportImplicitStringConcatenation = "warning"  # use ruff ISC instead
reportImportCycles = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
# reportShadowedImports = "warning"  # use ruff A0 instead
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "warning"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=term:skip-covered",
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E4", "E7", "E9", "W6",
    # mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-async
    "ASYNC",
    # flake8-bandit
    "S",
    # flake8-boolean-trap
    "FBT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-errmsg
    "EM",
    # flake8-logging-format
    "G",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # eradicate
    "ERA",
    # tryceratops
    "TRY",
    # perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["S101"]
